{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 92,
  "lineage": "f6eb501e-74f6-341f-e9f1-7152d703ac91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "clientes",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09179a962fadf762b",
            "arn": "arn:aws:ec2:us-east-1:937306895187:instance/i-06b2f9b4be37bb951",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-06b2f9b4be37bb951",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a5fc2b3a89134b0",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-100-31-74-139.compute-1.amazonaws.com",
            "public_ip": "100.31.74.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e9254e976de30125",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ee4c9e124417da7",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-clientes",
              "Project": "pedidos360",
              "Service": "clientes"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-clientes",
              "Project": "pedidos360",
              "Service": "clientes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5806f4727b53bb3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.services",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023"
          ]
        },
        {
          "index_key": "gateway",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09179a962fadf762b",
            "arn": "arn:aws:ec2:us-east-1:937306895187:instance/i-08b8dacf58f872e95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-08b8dacf58f872e95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0070d7889e24a286c",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-32-197-123-117.compute-1.amazonaws.com",
            "public_ip": "32.197.123.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a00d593be8c9381",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ee4c9e124417da7",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-gateway",
              "Project": "pedidos360",
              "Service": "gateway"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-gateway",
              "Project": "pedidos360",
              "Service": "gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5806f4727b53bb3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.services",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023"
          ]
        },
        {
          "index_key": "notificaciones",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09179a962fadf762b",
            "arn": "arn:aws:ec2:us-east-1:937306895187:instance/i-027580d2887167e0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-027580d2887167e0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f01cd6fbfe53cd9",
            "private_dns": "ip-10-0-1-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "public_dns": "ec2-54-165-236-39.compute-1.amazonaws.com",
            "public_ip": "54.165.236.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0bf0338dc1ad504",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ee4c9e124417da7",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-notificaciones",
              "Project": "pedidos360",
              "Service": "notificaciones"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-notificaciones",
              "Project": "pedidos360",
              "Service": "notificaciones"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5806f4727b53bb3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.services",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023"
          ]
        },
        {
          "index_key": "pedidos",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09179a962fadf762b",
            "arn": "arn:aws:ec2:us-east-1:937306895187:instance/i-0ae9084744cc4410f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0ae9084744cc4410f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da5d461ab95bc50a",
            "private_dns": "ip-10-0-1-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-3-81-236-115.compute-1.amazonaws.com",
            "public_ip": "3.81.236.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0799a9eb984f987e0",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ee4c9e124417da7",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-pedidos",
              "Project": "pedidos360",
              "Service": "pedidos"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-pedidos",
              "Project": "pedidos360",
              "Service": "pedidos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5806f4727b53bb3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.services",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023"
          ]
        },
        {
          "index_key": "productos",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09179a962fadf762b",
            "arn": "arn:aws:ec2:us-east-1:937306895187:instance/i-0e1c0369d28f7555e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0e1c0369d28f7555e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0caed2ad6adc43edc",
            "private_dns": "ip-10-0-1-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-3-91-91-153.compute-1.amazonaws.com",
            "public_ip": "3.91.91.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ec90fa597f590974",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ee4c9e124417da7",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-productos",
              "Project": "pedidos360",
              "Service": "productos"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-productos",
              "Project": "pedidos360",
              "Service": "productos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5806f4727b53bb3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.services",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:internet-gateway/igw-0620c82c44e3fd9a6",
            "id": "igw-0620c82c44e3fd9a6",
            "owner_id": "937306895187",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-igw",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-igw",
              "Project": "pedidos360"
            },
            "vpc_id": "vpc-0d8e298fb8e0ca624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:route-table/rtb-0b2c21126c7eacb0c",
            "id": "rtb-0b2c21126c7eacb0c",
            "owner_id": "937306895187",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0620c82c44e3fd9a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-public-rt",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-public-rt",
              "Project": "pedidos360"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8e298fb8e0ca624"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eecc0a5d857d364",
            "route_table_id": "rtb-0b2c21126c7eacb0c",
            "subnet_id": "subnet-06ee4c9e124417da7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9bd9bd7c4c33af7",
            "route_table_id": "rtb-0b2c21126c7eacb0c",
            "subnet_id": "subnet-068367897fd19bf6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:security-group/sg-0d5806f4727b53bb3",
            "description": "Allow microservice ports and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5806f4727b53bb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Microservice HTTP ports",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pedidos360-services-sg",
            "name_prefix": "",
            "owner_id": "937306895187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-services-sg",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-services-sg",
              "Project": "pedidos360"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8e298fb8e0ca624"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:subnet/subnet-0add5dc3f141f7588",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0add5dc3f141f7588",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937306895187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-private-0",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-private-0",
              "Project": "pedidos360"
            },
            "vpc_id": "vpc-0d8e298fb8e0ca624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:subnet/subnet-07e8f25ceef9c9023",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e8f25ceef9c9023",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937306895187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-private-1",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-private-1",
              "Project": "pedidos360"
            },
            "vpc_id": "vpc-0d8e298fb8e0ca624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:subnet/subnet-06ee4c9e124417da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ee4c9e124417da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937306895187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-public-0",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-public-0",
              "Project": "pedidos360"
            },
            "vpc_id": "vpc-0d8e298fb8e0ca624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:subnet/subnet-068367897fd19bf6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068367897fd19bf6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937306895187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-public-1",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-public-1",
              "Project": "pedidos360"
            },
            "vpc_id": "vpc-0d8e298fb8e0ca624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937306895187:vpc/vpc-0d8e298fb8e0ca624",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f1da74302bea2d7",
            "default_route_table_id": "rtb-0db2c42779bb3116b",
            "default_security_group_id": "sg-052127250ec815431",
            "dhcp_options_id": "dopt-059989518522405a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8e298fb8e0ca624",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db2c42779bb3116b",
            "owner_id": "937306895187",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-vpc",
              "Project": "pedidos360"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "Terraform",
              "Name": "pedidos360-vpc",
              "Project": "pedidos360"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}